Eliminate French Language.

--- a/exampleSite/i18n/en.yaml
+++ b/exampleSite/i18n/en.yaml
@@ -80,7 +80,7 @@
   translation: Enter your email…
 
 - id: company
-  translation: company
+  translation: Our Club
 
 - id: links
   translation: links
