Fix "More Fundraisers" header.

--- a/exampleSite/i18n/en.yaml
+++ b/exampleSite/i18n/en.yaml
@@ -73,6 +73,9 @@
 - id: more_event
   translation: More Events
 
+- id: more_fundraiser
+  translation: More Fundraisers
+
 - id: join
   translation: Join
   
